<resources>
    <string name="app_name">Just Work</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_company">Register Company</string>
    <string name="fill_details">Fill your details</string>
    <string name="fill_details_second">Fill your company data</string>
    <string name="company_log_in">Already Have an Account? Log in</string>
    <string name="date">Date</string>
    <string name="start_time">Shift start time:</string>
    <string name="end_time">Shift ends:</string>
    <string name="contact_person">Contact Person</string>
    <string name="required_employees">Requiered Employees</string>
    <string name="job_details_job_address">Katmjatka 10 -- Horsens, Denmark</string>
    <string name="job_details_company_name">DKI Logistics A/S</string>
    <string name="job_details_job_type">Temporary</string>
    <string name="job_details_job_salary">149,9 dkk/h</string>
    <string name="job_details_description">Description</string>
    <string name="job_details_company">Company</string>
    <string name="job_details_reviews">Reviews</string>
    <string name="job_details_apply_now">Apply Now</string>
    <string name="job_apply_fisrt_name">First Name</string>
    <string name="job_apply_last_name">Last Name</string>
    <string name="job_apply_your_email">Your Email</string>
    <string name="job_apply_country">Country</string>
    <string name="job_apply_message">Message</string>
    <string name="job_apply_CV">CV</string>
    <string name="job_apply_upload_here">Upload Here</string>
    <string name="signup_employeeUsername">Full name</string>
    <string name="signup_employeeEmail">Email Address</string>
    <string name="employee_signupPassword">Password</string>
    <string name="signup_employeeNEXT">NEXT</string>
    <string name="signup_employeeRegisterAccount">Register Account</string>
    <string name="signup_employeeFillDetails">Fill your details or continue with social media</string>
    <string name="signup_employeeContinueWith">-- Or Continue with --</string>
    <string name="signup_employeeAlreadyHaveAccount">Already Have An Account?</string>
    <string name="employee_signupLoginHere">Log in</string>
    <string name="google_logo">Google Logo</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="signup_employeeFillPersonalDetails">Fill your personal details</string>
    <string name="signup_employeeSIGNUP">SIGN UP</string>
    <string name="signup_employeeHomeAddress">Home Address</string>
    <string name="signup_employeeDrivingLicence">Driving Licence Categories</string>
    <string name="signup_employeeNationality">Nationality</string>
    <string name="signup_employeeGender">Gender</string>
    <string name="splash_findPerfectTextView">Find a Perfect Job Match</string>
    <string name="splash_finding_job_slogan">Finding a part-time job was never easier with JustWork</string>
    <string name="splash_button_text">Let\'s get Started</string>
    <string name="post_a_job_job_create">Job Create</string>
    <string name="job_title">Job Title</string>
    <string name="job_location">Location</string>
    <string name="job_description">Description</string>
    <string name="job_salary">Salary</string>
    <string name="search_string">Search</string>
    <string name="search_Job_Opportunities">0 Job opportunities</string>
    <string name="search_most_relevant">Most Relevant</string>
    <string name="search_most_recent">Most Recent</string>
    <string name="search_company_name">Company Name</string>
    <string name="search_job_title">Job title</string>
    <string name="search_salary">Salary</string>
    <string name="search_company_address">Address</string>
    <string name="search_post_time">Post Time</string>
    <string name="employee_home_popularJobs">Popular Jobs</string>
    <string name="employee_homeShowAll">Show All</string>
    <string name="employee_homeRecentPosts">Recent Posts</string>
    <string name="rv_jobApplicantPosition">Applied position</string>
    <string name="rv_job_applicantName">Job Applicant Name</string>
    <string name="rv_applicant_applicationTime">Application time</string>
    <string name="fill_your_details_or_continue_with_social_media">Fill your details or continue with social media</string>
    <string name="login">Login</string>
    <string name="new_user">New user ?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_profile">Name</string>
    <string name="email_Profile">Email</string>
    <string name="password_Profile">Password</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="location">Location</string>
    <string name="salary">Salary</string>
    <string name="job_type">Job Type</string>
    <string name="full_time">Full Time</string>
    <string name="part_time">Part Time</string>
    <string name="temporary">Temporary</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="cpr">Cpr:</string>
    <string name="licence">Licence:</string>
    <string name="address">Address:</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="if_you_got_rejected_by_any_company">If you got rejected by any company</string>
    <string name="got_rejected">Got Rejected</string>
    <string name="if_you_get_hired_by_any_company">If you get hired by any company</string>
    <string name="got_hired">Got Hired</string>
    <string name="if_any_new_post_update">If any new post update</string>
    <string name="new_post">New Post</string>
    <string name="your_applications">Your Applications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Full name</string>
    <string name="nav_header_subtitle">email.email@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_notification_settings">Notification Settings</string>
    <string name="menu_applications">Applications (0)</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="prompt_Job_Title">Job title</string>
    <string name="job_post_location">Job Location</string>
    <string name="job_post_salary">Salary dkk/h</string>
    <string name="description">Description</string>
    <string name="message_hint">Interesting information about you. Can be left empty</string>
    <string name="time_format">Time (hh:mm)</string>
    <string name="required_employees_hint">Required amount of employees</string>
    <string name="job_post_now">Post Now</string>
    <string name="menu_logout">Logout</string>
    <string name="job_application_item_status">Applied</string>
    <string name="job_application_item_salary">150dkk</string>
    <string name="job_application_item_job_type" >Hourly</string>
    <string name="signup_employeeCPR">CPR-Number</string>
    <string name="employee_signupPhoneNumber">ex: 52682010</string>
    <string name="RegisterUser">Register as Employee</string>
    <string name="RegisterCompoany">Register as Company</string>
    <string name="country">Country</string>
</resources>