<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/menu_edit_profile" />
        <item
            android:id="@+id/nav_applications"
            android:icon="@drawable/menu_applications"
            android:title="@string/menu_applications" />
        <item
            android:id="@+id/nav_notification_settings"
            android:icon="@drawable/menu_notification_settings"
            android:title="@string/menu_notification_settings" />
    </group>
</menu>