<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    android:background="@drawable/white_roundcorners">

    <ImageView
        android:id="@+id/search_logoId"
        android:layout_width="50dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/no_logo"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_companyName"
        style="@style/smallText"
        android:text="@string/search_company_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_logoId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_jobTitle"
        style="@style/boldText"
        android:text="@string/search_job_title"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_logoId"
        app:layout_constraintTop_toBottomOf="@+id/search_companyName" />

    <TextView
        android:id="@+id/search_salary"
        style="@style/smallText"
        android:layout_marginTop="0dp"
        android:textSize="16sp"
        android:text="@string/search_salary"
        app:layout_constraintStart_toEndOf="@+id/search_logoId"
        app:layout_constraintTop_toBottomOf="@+id/search_jobTitle" />

    <TextView
        android:id="@+id/search_companyAddress"
        style="@style/smallText"
        android:text="@string/search_company_address"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_salary"
        app:layout_constraintEnd_toStartOf="@+id/search_postTime"
        app:layout_constraintStart_toEndOf="@+id/search_salary" />

    <TextView
        android:id="@+id/search_postTime"
        style="@style/smallText"
        android:text="@string/search_post_time"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_companyAddress"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>