<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PostAJobSecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.PostAJob">

        <TextView
            android:id="@+id/textView"
            style="@style/smallText"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/job_date"
            style="@style/editTextStyling"
            android:background="@color/colorOnPrimary"
            android:inputType="date"
            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/smallText"
            android:text="@string/start_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job_date"
            />

        <EditText
            android:id="@+id/job_start_time"
            style="@style/editTextStyling"
            android:inputType="time"
            android:hint="@string/time_format"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/smallText"
            android:text="@string/end_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job_start_time"
            />

        <EditText
            android:id="@+id/job_end_time"
            style="@style/editTextStyling"
            android:inputType="time"
            android:hint="@string/time_format"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            style="@style/smallText"
            android:text="@string/contact_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job_end_time"
            />

        <EditText
            android:id="@+id/job_contact_person"
            style="@style/editTextStyling"
            android:inputType="textPersonName"
            android:hint="Contact Person Info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            style="@style/smallText"
            android:text="@string/required_employees"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job_contact_person" />

        <EditText
            android:id="@+id/job_required_employees"
            style="@style/editTextStyling"
            android:background="@color/colorOnPrimary"
            android:inputType="number"
            android:hint="@string/required_employees_hint"
            app:layout_constraintBottom_toTopOf="@+id/button_post_job"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <Button
            android:id="@+id/button_post_job"
            style="@style/defaultButton"
            android:text="@string/job_post_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/job_required_employees" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>