<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/white_roundcorners">

    <ImageView
        android:id="@+id/search_applicant_image"
        android:layout_width="50dp"
        android:src="@drawable/no_logo"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/job_applicant_job_position"
        style="@style/smallText"
        android:text="@string/rv_jobApplicantPosition"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_applicant_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_applicant_fullName"
        style="@style/boldText"
        android:text="@string/rv_job_applicantName"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_applicant_image"
        app:layout_constraintTop_toBottomOf="@+id/job_applicant_job_position" />

    <TextView
        android:id="@+id/search_applicant_salary"
        style="@style/smallText"
        android:layout_marginTop="0dp"
        android:textSize="16sp"
        android:text="@string/search_salary"
        app:layout_constraintStart_toEndOf="@+id/search_applicant_image"
        app:layout_constraintTop_toBottomOf="@+id/search_applicant_fullName" />

    <TextView
        android:id="@+id/search_applicant_companyAddress"
        style="@style/smallText"
        android:text="@string/search_company_address"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_applicant_salary"
        app:layout_constraintEnd_toStartOf="@+id/search_applicant_postTime"
        app:layout_constraintStart_toEndOf="@+id/search_applicant_salary" />

    <TextView
        android:id="@+id/search_applicant_postTime"
        style="@style/smallText"
        android:text="@string/rv_applicant_applicationTime"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_applicant_companyAddress"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>